# japanese-subtitle-app

./: .gitignore  CLAUDE.md  settings.gradle.kts
.claude/: settings.local.json
.claude/rules/: coding-style.md  security.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/subtitle/japanese/: SubtitleApp.kt
app/src/main/java/com/subtitle/japanese/audio/: AudioBuffer.kt  AudioCaptureManager.kt
app/src/main/java/com/subtitle/japanese/data/: AppDatabase.kt  SubtitleDao.kt  SubtitleEntry.kt  SubtitleRepository.kt  UserPreferences.kt
app/src/main/java/com/subtitle/japanese/overlay/: OverlayManager.kt
app/src/main/java/com/subtitle/japanese/pipeline/: PipelineState.kt  SubtitlePipeline.kt
app/src/main/java/com/subtitle/japanese/service/: SubtitleOverlayService.kt
app/src/main/java/com/subtitle/japanese/translation/: BaiduTranslator.kt  Md5Util.kt  TranslationCache.kt  TranslationResult.kt
app/src/main/java/com/subtitle/japanese/ui/: HistoryActivity.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/java/com/subtitle/japanese/util/: Constants.kt  PermissionHelper.kt
app/src/main/java/com/subtitle/japanese/whisper/: WhisperConfig.kt  WhisperEngine.kt  WhisperJni.kt  (+1 more)
app/src/main/jni/: CMakeLists.txt  whisper-jni.cpp
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_history.xml  activity_main.xml  activity_settings.xml  overlay_subtitle.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: plan.md
